made all public, non-static fields in HotSpotVMConfig final